home/static/css/sectionStyles.css
/* ... */
.questionnaire {
  width: 232px;
  height: 186px;
  left: 0px;
  top: 0px;
  background-color: red;
  border-radius: 8px;
  margin: 24px 0;
}

.questionnaire__title {
  width: 139px;
  height: 40px;
  padding-left: 14px;
  top: 18px;
  font-family: Poppins;
  font-style: normal;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #FFFFFF;
}

.questionnaire__CTA {
  width: 200px;
  height: 64px;
  padding-left: 16px;
  top: 62px;
  font-family: Poppins;
  font-style: normal;
  font-weight: 500;
  font-size: 10px;
  line-height: 16px;
  color: #FFFFFF;
}

.questionnaire .button__white {
  text-decoration: none;
  padding: 8px 16px;
  border-radius: 28px;
  margin-left: 16px;
  font-family: Poppins;
  font-style: normal;
  font-weight: 600;
  font-size: 10px;
  line-height: 14px;
  border: none;
  background-color: #FFFFFF;
  color: black;
}

.article__img {
  width: 100%;
  height: auto;
}

.article__back {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  color: white;
  text-decoration: none;
  background-color: #0094F4;
  padding: 15px 20px;
}

.article__back--image1 {
  margin-right: 6px;
}

.article-content {
  padding: 0px 22px;
  font-family: Poppins;
}

.article-content img {
  width: 100%;
  height: auto;
}

.article-content h1 {
  font-style: normal;
  font-weight: bold;
  font-size: 24px;
  line-height: 28px;
  color: #303030;
  margin-bottom: 24px;
}

.article-content p {
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  color: #4B4B4B;
}

.article-content video, .article-content audio {
  margin: 10px 0px;
  width: 100%;
  height: auto;
}

.article-content__chat-btn {
  margin-top: 20px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  padding: 12px 16px;
  height: 46px;
  border: 1px solid #303030;
  background-color: white;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  border-radius: 8px;
  width: 100%;
  left: 106.5px;
  top: 12px;
  font-family: Poppins;
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 22px;
  color: #303030;
  text-decoration: none;
}

.quiz-holder {
  margin: 12px;
  margin-top: 32px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.quiz-holder a {
  text-decoration: none;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  color: inherit;
}

.quiz-holder p:first-of-type {
  font-family: Poppins;
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.1em;
  text-transform: uppercase;
}

.quiz-holder p {
  padding-right: 20px;
  margin: 0;
}

.quiz-holder p:nth-of-type(2n) {
  font-family: Poppins;
  font-style: normal;
  font-weight: bold;
  font-size: 16px;
  line-height: 22px;
  letter-spacing: 0.01em;
}

.quiz-holder__quiz {
  width: 100%;
  margin: 16px;
  padding: 8px 12px;
  border-radius: 8px;
}

.quiz-holder__image {
  width: 12px;
  height: 12px;
}

.article-navigation {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  padding-top: 24px;
}

.article-navigation a {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  padding: 12px 16px;
  text-decoration: none;
  position: static;
  width: 132px;
  height: 46px;
  left: calc(50% - 156px/2 - 82px);
  top: 0px;
  border: 1px solid #EFEFEF;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  border-radius: 24px;
}

.article-navigation__button--previous {
  height: 22px;
  left: 43px;
  top: 12px;
  font-family: Poppins;
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 22px;
  color: #303030;
}

.article-navigation__button--next {
  height: 22px;
  left: 59.5px;
  top: 12px;
  background-color: black;
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 22px;
  color: #FFFFFF;
}

.related_reading {
  margin: 0px 20px;
  font-family: Poppins;
  font-style: normal;
}

.related_reading h2 {
  height: 28px;
  font-weight: 800;
  font-size: 24px;
  line-height: 28px;
  color: #303030;
}

.related_reading ul {
  list-style: none;
  padding: 0;
}

.related_reading ul p {
  width: 50%;
  font-family: Poppins;
  font-style: normal;
  font-weight: bold;
  font-size: 18px;
  margin-right: 5px;
  line-height: 24px;
  letter-spacing: 0.01em;
  color: #303030;
}
/* ... */

